--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,11 @@
   width: 100%;
   text-align: center;
   padding: 20px 0;
+  text-align: center;
 }
 .side-bardash li:hover {
   background-color: rgb(39, 37, 37);
+  text-align: center;
 }
 li h1 {
   color: white;
@@ -46,6 +48,10 @@ li h1 {
 .bardash {
   color: white;
   background-color: black;
+  text-align: center;
+}
+.side-bardash{
+  display: flex;
 }
 .dashpicCard img {
   width: 2cm;
@@ -57,8 +63,8 @@ table {
   border-radius: 10px;
 }
 .dashpicCard {
-  margin-left: 270px;
-  margin-top: 580px;
+  margin-left: 290px;
+  margin-top: 680px;
   display: flex;
 }
 .dashpic {
@@ -121,6 +127,7 @@ li #user-img {
     align-items: center;
     list-style: none;
     flex-basis: 20%;
+    text-align: center;
   }
   .side-bardash li {
     cursor: pointer;
@@ -130,6 +137,7 @@ li #user-img {
   }
   .side-bardash li:hover {
     background-color: rgb(39, 37, 37);
+    text-align: center;
   }
   li h1 {
     color: white;
@@ -340,4 +348,29 @@ li #user-img {
   margin-right: 16px;
   margin-top: 10px;
   width: 100px;
+}
+/* .chart1{
+  margin-left: -20px;
+  margin-top: 120px ;
+} */
+.chart2{
+    margin-top: 90px ;
+    margin-left: 7px;
+    background-color: rgba(0, 0, 0, 0.24);
+    height: 250px;
+    width: 330px;
+}
+.bar3{
+  margin-top: 90px ;
+    margin-left: 7px;
+    background-color: rgba(0, 0, 0, 0.24);
+    height: 250px;
+    width: 330px;
+}
+.BAR4{
+  margin-top: 370px ;
+  display: flex;
+  margin-left: -1004px;
+  border: black 2px solid;
+  border-radius: 10px;
 }
